# Failsafe-Stellar

./: .gitignore  README.md  WHY.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
dead-mans-wallet/: .gitignore  Cargo.toml
dead-mans-wallet/.cargo/: config.toml
dead-mans-wallet/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20250515203338_add_log_entries/: migration.sql
scripts/: generate-keypair.js
src/: README.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/: route.ts
src/app/api/ai/execute/: route.ts
src/app/api/ai/webhook/: route.ts
src/app/api/check-wallets/: route.ts
src/app/api/deadManWallet/: route.ts
src/app/api/logs/: route.ts
src/components/: ConnectView.tsx  ConnectedWallet.tsx  DeadMansWallet.tsx  FundWithLaunchtube.tsx  InitialView.tsx  LogEntries.tsx  RegisterView.tsx  SorobanFundingInfo.tsx  StyledComponents.tsx  WalletDemo.tsx  providers.tsx
src/hooks/: useDeadMansWallet.ts
src/lib/: passkey.ts  prisma.ts
src/store/: walletSlice.ts
