[package]
name = "dead-mans-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.7", default-features = false }

[profile.release]
panic = "abort"
lto = false
opt-level = "z"
codegen-units = 1

[target.wasm32-unknown-unknown]
rustflags = [
    "-C", "target-feature=-reference-types",
    "-C", "link-arg=--no-entry"
]